<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="CHUAN_YUE">chuanyue</string>
    <string name="Cancel">取消</string>
    <string name="HISTORY_GOD_STRING">history_god_string</string>
    <string name="HISTORY_TODAY_HOT_POST_NAME">history_today_hot_post_name</string>
    <string name="HISTORY_TODAY_HOT_POST_UMENG_NAME">历史热帖精华插入位置</string>
    <string name="HintInputName">请输入昵称</string>
    <string name="HintInputRid">请输入房间号</string>
    <string name="InfoAbout">提示消息</string>
    <string name="JING_XUAN">jingxuan</string>
    <string name="NoSupportGif">暂不支持GIF图片</string>
    <string name="REQUEST_CONTACT_NAME">request_contact_name</string>
    <string name="RESPONE_RESULT_CONTACT_NAME">contact_name</string>
    <string name="RESPONE_RESULT_TOPIC_NAME">topic_name</string>
    <string name="RE_MEN">remen</string>
    <string name="SearchingNowPleaseWait">正在查找中, 请稍候...</string>
    <string name="TipsKeyWordTooShort">昵称请至少输入3个字符!</string>
    <string name="TipsNetWorkError">网络连接错误, 请稍后搜索...</string>
    <string name="TipsNoKeyWord">请输入搜索关键字!</string>
    <string name="TipsRidTooShort">房号请至少输入2个字符!</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">不再提示</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小：</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateCheck">2.4.2.20140520</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载：</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="ZUI_XIN">zuixin</string>
    <string name="about_email">联系邮件：</string>
    <string name="about_name">公司名称：</string>
    <string name="about_phone">联系电话：</string>
    <string name="about_qq">联系 Q Q：</string>
    <string name="about_url">公司网址：</string>
    <string name="about_us">关于我们</string>
    <string name="about_user_id">用户ID号：</string>
    <string name="access_sd_fail">无法访问 SD 卡。</string>
    <string name="action_settings">Settings</string>
    <string name="activities_homepage">活动首页</string>
    <string name="activityover_btn">已结束 查看结果</string>
    <string name="add_blacklist_dialog_content">确定将此人加入黑名单么吗？</string>
    <string name="add_collect">添加收藏...</string>
    <string name="add_follow">关注</string>
    <string name="add_label">添加标签</string>
    <string name="add_love">添加喜欢...</string>
    <string name="add_topic">添加话题</string>
    <string name="add_vote_item_edit_hint">选项%1$s（15字以内）</string>
    <string name="address">联系地址：</string>
    <string name="after_00s">00后</string>
    <string name="after_70s">70后</string>
    <string name="after_80s">80后</string>
    <string name="after_85s">85后</string>
    <string name="after_90s">90后</string>
    <string name="after_95s">95后</string>
    <string name="again_input">个字，请重新输入</string>
    <string name="again_verify">重发验证码</string>
    <string name="album">相册</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action">请在初始化之前调用 TradeConfigs.defaultTaokePid=mm_**** 设置默认的淘客 pid 值, 此值会在相关方法调用时未指定 pid 时使用</string>
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="all_anchor">全部主播</string>
    <string name="already_collected">已经收藏过了</string>
    <string name="already_delete_cmt">当前评论已被删除</string>
    <string name="already_delete_tiezi">当前帖子已被删除</string>
    <string name="already_ding">已经顶过了</string>
    <string name="already_last">已是最后一条</string>
    <string name="already_newest_version">已经是最新版本</string>
    <string name="alter_psw">修改独立密码</string>
    <string name="anonym">匿名</string>
    <string name="anonym_dilog_tip_msg">选中匿名赠送仅收礼人知道您的身份</string>
    <string name="app_hall_net_warn">请注意，您正在使用3G网络，流量会产生相应费用，推荐您使用WIFI网络。</string>
    <string name="app_name">百思不得姐</string>
    <string name="app_room_net_toast_warn">您正在使用非WIFI网络观看直播</string>
    <string name="app_room_net_warn">网络不稳定，无法连接服务器，请检查您的网络是否可用。</string>
    <string name="app_update">升级</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_recommend">精彩应用推荐</string>
    <string name="atten_msg">当前没有关注的主播</string>
    <string name="attention_live_name_tv">关注直播</string>
    <string name="audience_list_name_tv">观众列表</string>
    <string name="company_address">北京市朝阳区天辰东路7号国家会议中心北区四层（精灵在线）</string>
    <string name="company_name">精灵在线</string>
    <string name="company_url">http://www.spriteapp.com</string>
    <string name="contact_email">i@spriteapp.com</string>
    <string name="contact_phone">010-84374266</string>
    <string name="contact_qq">133084754</string>
    <string name="education_1">在读学生</string>
    <string name="education_1_tag">1</string>
    <string name="education_2">高中毕业</string>
    <string name="education_2_tag">2</string>
    <string name="education_3">专科毕业</string>
    <string name="education_3_tag">3</string>
    <string name="education_4">本科毕业</string>
    <string name="education_4_tag">4</string>
    <string name="footprint">足迹</string>
    <string name="go_login">去授权</string>
    <string name="hot_latest">近期热门</string>
    <string name="my_car">购物车</string>
    <string name="my_feedback">购物反馈</string>
    <string name="my_order">我的订单</string>
    <string name="now_active">好久没看帖了,快来看看</string>
    <string name="now_active_two">吧&gt;&gt;</string>
    <string name="product_url">http://www.budejie.com</string>
    <string name="product_urls">产品网址：</string>
    <string name="tb_login">授权登录</string>
    <string name="ttg_bc_register">淘宝注册</string>
    <string name="ttg_coupon_discount_price">领券后立享优惠</string>
    <string name="ttg_get_coupon_now">立即领取</string>
    <string name="ttg_icon_coupon_show"></string>
    <string name="ttg_icon_default_img"></string>
    <string name="ttg_icon_into_cart"></string>
    <string name="ttg_icon_me_shenfeng"></string>
    <string name="ttg_icon_order"></string>
    <string name="ttg_icon_shop_feedback"></string>
    <string name="ttg_icon_taobao"></string>
    <string name="ttg_load_fail">加载失败</string>
    <string name="ttg_my_icon_footprint"></string>
    <string name="ttg_no_data">哎呀，数据加载出错啦！请点击重试</string>
    <string name="ttg_order_lessen_prices">拍下后支付立减价格</string>
    <string name="ttg_try_again">点击重试</string>
    <string name="ttg_use_coupon_discount_price">用券后</string>
</resources>