<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fresco="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res/com.budejie.www" android:orientation="vertical" android:id="@+id/user_info_collect_buttons" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/user_info_collect_margin" android:layout_marginRight="@dimen/user_info_collect_margin" android:weightSum="3">
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_70s" android:tag="70" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_70s" android:layout_weight="1"/>
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_80s" android:tag="80" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_80s" android:layout_weight="1"/>
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_85s" android:tag="85" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_85s" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/user_info_collect_margin" android:layout_marginRight="@dimen/user_info_collect_margin" android:weightSum="3">
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_90s" android:tag="90" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_90s" android:layout_weight="1"/>
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_95s" android:tag="95" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_95s" android:layout_weight="1"/>
        <Button android:textSize="18sp" android:textColor="@color/user_info_collect_selector" android:id="@+id/after_00s" android:tag="00" android:background="?attr/user_info_collect_btn_bg" android:layout_width="100dp" android:layout_height="40dp" android:layout_margin="10dp" android:text="@string/after_00s" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
